// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RatingFormField component should handle onClick/handleChange correctly 1`] = `
<RatingFormField
  clearable={true}
  input={
    Object {
      "value": 5,
    }
  }
>
  <Rating
    clearable={true}
    maxRating={5}
    onRate={[Function]}
    rating={5}
    size="large"
  >
    <div
      className="ui large rating"
      onMouseLeave={[Function]}
      role="radiogroup"
    >
      <RatingIcon
        active={true}
        aria-checked={false}
        aria-posinset={1}
        aria-setsize={5}
        index={0}
        onClick={[Function]}
        onMouseEnter={[Function]}
        selected={false}
      >
        <div
          aria-checked={false}
          aria-posinset={1}
          aria-setsize={5}
          className="active icon"
          onClick={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          role="radio"
          tabIndex={0}
        />
      </RatingIcon>
      <RatingIcon
        active={true}
        aria-checked={false}
        aria-posinset={2}
        aria-setsize={5}
        index={1}
        onClick={[Function]}
        onMouseEnter={[Function]}
        selected={false}
      >
        <div
          aria-checked={false}
          aria-posinset={2}
          aria-setsize={5}
          className="active icon"
          onClick={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          role="radio"
          tabIndex={0}
        />
      </RatingIcon>
      <RatingIcon
        active={true}
        aria-checked={false}
        aria-posinset={3}
        aria-setsize={5}
        index={2}
        onClick={[Function]}
        onMouseEnter={[Function]}
        selected={false}
      >
        <div
          aria-checked={false}
          aria-posinset={3}
          aria-setsize={5}
          className="active icon"
          onClick={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          role="radio"
          tabIndex={0}
        />
      </RatingIcon>
      <RatingIcon
        active={true}
        aria-checked={false}
        aria-posinset={4}
        aria-setsize={5}
        index={3}
        onClick={[Function]}
        onMouseEnter={[Function]}
        selected={false}
      >
        <div
          aria-checked={false}
          aria-posinset={4}
          aria-setsize={5}
          className="active icon"
          onClick={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          role="radio"
          tabIndex={0}
        />
      </RatingIcon>
      <RatingIcon
        active={true}
        aria-checked={true}
        aria-posinset={5}
        aria-setsize={5}
        index={4}
        onClick={[Function]}
        onMouseEnter={[Function]}
        selected={false}
      >
        <div
          aria-checked={true}
          aria-posinset={5}
          aria-setsize={5}
          className="active icon"
          onClick={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          role="radio"
          tabIndex={0}
        />
      </RatingIcon>
    </div>
  </Rating>
</RatingFormField>
`;

exports[`RatingFormField component should render if initial rating provided 1`] = `
<RatingFormField
  clearable={true}
  input={
    Object {
      "value": 3,
    }
  }
>
  <Rating
    clearable={true}
    maxRating={5}
    onRate={[Function]}
    rating={3}
    size="large"
  >
    <div
      className="ui large rating"
      onMouseLeave={[Function]}
      role="radiogroup"
    >
      <RatingIcon
        active={true}
        aria-checked={false}
        aria-posinset={1}
        aria-setsize={5}
        index={0}
        onClick={[Function]}
        onMouseEnter={[Function]}
        selected={false}
      >
        <div
          aria-checked={false}
          aria-posinset={1}
          aria-setsize={5}
          className="active icon"
          onClick={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          role="radio"
          tabIndex={0}
        />
      </RatingIcon>
      <RatingIcon
        active={true}
        aria-checked={false}
        aria-posinset={2}
        aria-setsize={5}
        index={1}
        onClick={[Function]}
        onMouseEnter={[Function]}
        selected={false}
      >
        <div
          aria-checked={false}
          aria-posinset={2}
          aria-setsize={5}
          className="active icon"
          onClick={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          role="radio"
          tabIndex={0}
        />
      </RatingIcon>
      <RatingIcon
        active={true}
        aria-checked={true}
        aria-posinset={3}
        aria-setsize={5}
        index={2}
        onClick={[Function]}
        onMouseEnter={[Function]}
        selected={false}
      >
        <div
          aria-checked={true}
          aria-posinset={3}
          aria-setsize={5}
          className="active icon"
          onClick={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          role="radio"
          tabIndex={0}
        />
      </RatingIcon>
      <RatingIcon
        active={false}
        aria-checked={false}
        aria-posinset={4}
        aria-setsize={5}
        index={3}
        onClick={[Function]}
        onMouseEnter={[Function]}
        selected={false}
      >
        <div
          aria-checked={false}
          aria-posinset={4}
          aria-setsize={5}
          className="icon"
          onClick={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          role="radio"
          tabIndex={0}
        />
      </RatingIcon>
      <RatingIcon
        active={false}
        aria-checked={false}
        aria-posinset={5}
        aria-setsize={5}
        index={4}
        onClick={[Function]}
        onMouseEnter={[Function]}
        selected={false}
      >
        <div
          aria-checked={false}
          aria-posinset={5}
          aria-setsize={5}
          className="icon"
          onClick={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          role="radio"
          tabIndex={0}
        />
      </RatingIcon>
    </div>
  </Rating>
</RatingFormField>
`;

exports[`RatingFormField component should render without rating if none provided 1`] = `
<RatingFormField
  clearable={true}
  input={
    Object {
      "value": null,
    }
  }
>
  <Rating
    clearable={true}
    maxRating={5}
    onRate={[Function]}
    rating={null}
    size="large"
  >
    <div
      className="ui large rating"
      onMouseLeave={[Function]}
      role="radiogroup"
    >
      <RatingIcon
        active={false}
        aria-checked={false}
        aria-posinset={1}
        aria-setsize={5}
        index={0}
        onClick={[Function]}
        onMouseEnter={[Function]}
        selected={false}
      >
        <div
          aria-checked={false}
          aria-posinset={1}
          aria-setsize={5}
          className="icon"
          onClick={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          role="radio"
          tabIndex={0}
        />
      </RatingIcon>
      <RatingIcon
        active={false}
        aria-checked={false}
        aria-posinset={2}
        aria-setsize={5}
        index={1}
        onClick={[Function]}
        onMouseEnter={[Function]}
        selected={false}
      >
        <div
          aria-checked={false}
          aria-posinset={2}
          aria-setsize={5}
          className="icon"
          onClick={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          role="radio"
          tabIndex={0}
        />
      </RatingIcon>
      <RatingIcon
        active={false}
        aria-checked={false}
        aria-posinset={3}
        aria-setsize={5}
        index={2}
        onClick={[Function]}
        onMouseEnter={[Function]}
        selected={false}
      >
        <div
          aria-checked={false}
          aria-posinset={3}
          aria-setsize={5}
          className="icon"
          onClick={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          role="radio"
          tabIndex={0}
        />
      </RatingIcon>
      <RatingIcon
        active={false}
        aria-checked={false}
        aria-posinset={4}
        aria-setsize={5}
        index={3}
        onClick={[Function]}
        onMouseEnter={[Function]}
        selected={false}
      >
        <div
          aria-checked={false}
          aria-posinset={4}
          aria-setsize={5}
          className="icon"
          onClick={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          role="radio"
          tabIndex={0}
        />
      </RatingIcon>
      <RatingIcon
        active={false}
        aria-checked={false}
        aria-posinset={5}
        aria-setsize={5}
        index={4}
        onClick={[Function]}
        onMouseEnter={[Function]}
        selected={false}
      >
        <div
          aria-checked={false}
          aria-posinset={5}
          aria-setsize={5}
          className="icon"
          onClick={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          role="radio"
          tabIndex={0}
        />
      </RatingIcon>
    </div>
  </Rating>
</RatingFormField>
`;
